tests/snapshots/pty_snapshots__movement_after_c_n_c_f_60x12.snap
---
source: tests/pty_snapshots.rs
expression: rile.snapshot_screen()
---
size: 60x12
cursor: row 2, column 2
001: 000 | 0123456789 0123456789 0123456789 0123456789
002: 001 | 0123456789 0123456789 0123456789 0123456789
003: 002 | 0123456789 0123456789 0123456789 0123456789
       ^
004: 003 | 0123456789 0123456789 0123456789 0123456789
005: 004 | 0123456789 0123456789 0123456789 0123456789
006: 005 | 0123456789 0123456789 0123456789 0123456789
007: 006 | 0123456789 0123456789 0123456789 0123456789
008: 007 | 0123456789 0123456789 0123456789 0123456789
009: 008 | 0123456789 0123456789 0123456789 0123456789
010: 009 | 0123456789 0123456789 0123456789 0123456789
011: -- Rile VISUAL window 0 ACTIVE numbered.txt Ln 003 Col 002 m
012:
