tests/snapshots/pty_snapshots__open_numbered_50x10.snap
---
source: tests/pty_snapshots.rs
expression: rile.snapshot_screen()
---
size: 50x10
cursor: row 0, column 0
001: 000 | 0123456789 0123456789 0123456789 0123456789
     ^
002: 001 | 0123456789 0123456789 0123456789 0123456789
003: 002 | 0123456789 0123456789 0123456789 0123456789
004: 003 | 0123456789 0123456789 0123456789 0123456789
005: 004 | 0123456789 0123456789 0123456789 0123456789
006: 005 | 0123456789 0123456789 0123456789 0123456789
007: 006 | 0123456789 0123456789 0123456789 0123456789
008: 007 | 0123456789 0123456789 0123456789 0123456789
009: -- Rile VISUAL window 0 ACTIVE numbered.txt Ln 001
010:
