tests/snapshots/pty_snapshots__split_below_after_other_window_80x16.snap
---
source: tests/pty_snapshots.rs
expression: rile.snapshot_screen()
---
size: 80x16
cursor: row 8, column 0
001: left 000 | alpha
002: left 001 | beta
003: left 002 | gamma
004: left 003 | delta
005:
006:
007:
008: -- Rile VISUAL window 0 inactive split_left.txt Ln 001 Col 000 modified:false Al
009: left 000 | alpha
     ^
010: left 001 | beta
011: left 002 | gamma
012: left 003 | delta
013:
014:
015: -- Rile VISUAL window 1 ACTIVE split_left.txt Ln 001 Col 000 modified:false All
016: Selected other window
